--- a/deploy/adt_demo.conf
+++ b/deploy/adt_demo.conf
@@ -5,14 +5,14 @@ upstream adt_demo {
 server {
   listen 0.0.0.0:80;
 
-  server_name codingpains www.codingpains;
+  server_name adt_demo.codingpains;
   access_log /var/log/nginx/codingpains.access.log;
   error_log  /var/log/nginx/codingpains.error.log;
 
   real_ip_header X-Forwarded-For;
   set_real_ip_from 0.0.0.0/0;
 
-  location /adt_demo {
+  location / {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-NginX-Proxy true;
     proxy_set_header Host $host;
