Change server  ame

--- a/deploy/adt_demo.conf
+++ b/deploy/adt_demo.conf
@@ -5,7 +5,7 @@ upstream adt_demo {
 server {
   listen 0.0.0.0:80;
 
-  server_name adt_demo.codingpains;
+  server_name adt.codingpains.com;
   access_log /var/log/nginx/codingpains.access.log;
   error_log  /var/log/nginx/codingpains.error.log;
 
